--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=Mpatient
+server.port=9001
+
+#CONFIGURATION DATA SOURCE
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/patientservice?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=rootroot
+#DEFINI ENCODAGE POUR DATA.SQL
+spring.datasource.sql-script-encoding=UTF-8
+
+#CONFIGURATION JPA
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+
+
+spring.sql.init.mode=always
