--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,2 +1,36 @@
-spring.application.name=Mpatient
-spring.config.import=configserver:http://localhost:9101
+spring.application.name=mpatient
+spring.config.import=optional:configserver:http://localhost:9101
+
+server.port=9001
+
+#CONFIGURATION DATA SOURCE
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/patientservice?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=rootroot
+#DEFINI ENCODAGE POUR DATA.SQL
+spring.datasource.sql-script-encoding=UTF-8
+
+#CONFIGURATION JPA
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+
+spring.sql.init.mode=always
+
+#MES CONFIGURATIONS
+#limitDePatients : 0 = All
+mes-configs.limitDePatients=0
+
+#REFRESH ACTUATOR Reload server config
+management.endpoints.web.exposure.include=refresh
+
+# A AJOUTER A CONFIG-SERVER
+#Eureka
+eureka.client.serviceUrl.defaultZone:http://localhost:9102/eureka/
+
+# RENOUVELLEMENT EUREKA
+eureka.instance.leaseRenewalIntervalInSeconds=4
+
+# Forcer IP locale au lieu du hostname de entreprise
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=localhost
