Refactor name of package project to mpatient

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -23,6 +23,7 @@ mes-configs.limitDePatients=0
 
 #REFRESH ACTUATOR Reload server config
 management.endpoints.web.exposure.include=refresh
+#management.endpoints.web.exposure.include=health,info,prometheus
 
 # A AJOUTER A CONFIG-SERVER
 #Eureka
