--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -22,7 +22,7 @@ spring.sql.init.mode=always
 mes-configs.limitDePatients=0
 
 #REFRESH ACTUATOR Reload server config
-management.endpoints.web.exposure.include=refresh
+#management.endpoints.web.exposure.include=refresh      --> see Distributed Tracing
 #management.endpoints.web.exposure.include=health,info,prometheus
 
 # A AJOUTER A CONFIG-SERVER
@@ -35,3 +35,29 @@ eureka.instance.leaseRenewalIntervalInSeconds=4
 # Forcer IP locale au lieu du hostname de entreprise
 eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=localhost
+
+
+####  DISTRIBUTED TRACING  - SPRING CLOUD SLEUTH - MICROMETER TRACING  ####
+
+# Configuration pour chaque microservice (mgateway, clientui, mpatient)
+
+# Configuration des endpoints Actuator
+management.endpoints.web.exposure.include=health,info,metrics,prometheus,tracing,refresh
+
+# Configuration du tracing distribué
+# 100% des traces (réduire en production ex: 0.1 pour 10%)
+management.tracing.sampling.probability=1.0
+
+# Configuration Zipkin
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+# Ou si Zipkin est dans un container Docker :
+# management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
+
+# Configuration des logs pour inclure les trace ID et span ID
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+
+# Niveaux de logs
+# Pour mgateway seulement (commentez pour les autres services)
+#logging.level.org.springframework.cloud.gateway=DEBUG
+# Pour debug le tracing (optionnel)
+#logging.level.io.micrometer.tracing=DEBUG
