Add custom info contributor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=mpatient
-spring.config.import=optional:configserver:http://localhost:9101
+#spring.config.import=optional:configserver:http://localhost:9101
+spring.cloud.config.enabled=false
 
 server.port=9001
 
@@ -21,10 +22,6 @@ spring.sql.init.mode=always
 #limitDePatients : 0 = All
 mes-configs.limitDePatients=0
 
-#REFRESH ACTUATOR Reload server config
-#management.endpoints.web.exposure.include=refresh      --> see Distributed Tracing
-#management.endpoints.web.exposure.include=health,info,prometheus
-
 # A AJOUTER A CONFIG-SERVER
 #Eureka
 eureka.client.serviceUrl.defaultZone:http://localhost:9102/eureka/
@@ -38,12 +35,6 @@ eureka.instance.hostname=localhost
 
 
 ####  DISTRIBUTED TRACING  - SPRING CLOUD SLEUTH - MICROMETER TRACING  ####
-
-# Configuration pour chaque microservice (mgateway, clientui, mpatient)
-
-# Configuration des endpoints Actuator
-management.endpoints.web.exposure.include=health,info,metrics,prometheus,tracing,refresh
-
 # Configuration du tracing distribué
 # 100% des traces (réduire en production ex: 0.1 pour 10%)
 management.tracing.sampling.probability=1.0
@@ -61,3 +52,19 @@ logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-
 #logging.level.org.springframework.cloud.gateway=DEBUG
 # Pour debug le tracing (optionnel)
 #logging.level.io.micrometer.tracing=DEBUG
+
+
+####  ACTUATOR  ####
+# Configuration des endpoints Actuator
+#management.endpoints.web.exposure.include=health,info,metrics,prometheus,tracing,refresh
+management.endpoints.web.exposure.include=*
+
+##  LOG  ##
+logging.level.org.springframework.boot.actuate=DEBUG
+logging.level.org.springframework.boot.actuate.autoconfigure=DEBUG
+
+##  /INFO  ##
+info.app.version=Version en cours de developpement
+info.app.description=MicroDiab, application d'analyse du diabete des patients
+info.app.documentation=Lien vers la documentation de l'application
+info.app.information=Informations utiles
