--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=mpatient
+
+###  SRPING CLOUD CONFIG ###
 #spring.config.import=optional:configserver:http://localhost:9101
 spring.cloud.config.enabled=false
 
