Fix JPA open-in-view disable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,16 @@ spring.datasource.password=rootroot
 #DEFINI ENCODAGE POUR DATA.SQL
 spring.datasource.sql-script-encoding=UTF-8
 
-#CONFIGURATION JPA
+###  CONFIGURATION JPA  ###
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+
+# Open In View JPA
+# Enabled by default in Spring Boot applications using JPA/Hibernate.
+# This option keeps the Hibernate session open for the duration of the HTTP request.
+# It is generally advisable to disable the option for better resource management and more predictable behavior.
+# Useful when lazy loading is required
+spring.jpa.open-in-view=false
 
 spring.sql.init.mode=always
 
