Refactor actuator info.app

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -73,7 +73,7 @@ logging.level.org.springframework.boot.actuate=DEBUG
 logging.level.org.springframework.boot.actuate.autoconfigure=DEBUG
 
 ##  /INFO  ##
-info.app.version=Version en cours de developpement
-info.app.description=MicroDiab, application d'analyse du diabete des patients
-info.app.documentation=Lien vers la documentation de l'application
-info.app.information=Informations utiles
+info.app.version=mpatient - Version en cours de developpement
+info.app.description=mpatient - MicroDiab, application d'analyse du diabete des patients
+info.app.documentation=mpatient - Lien vers la documentation de l'application
+info.app.information=mpatient - Informations utiles
