--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ spring.sql.init.mode=always
 
 #MES CONFIGURATIONS
 #limitDePatients : 0 = All
-mes-configs.limitDePatients=0
+#mes-configs.limitDePatients=0
 
 # A AJOUTER A CONFIG-SERVER
 #Eureka
@@ -44,6 +44,10 @@ eureka.instance.hostname=localhost
 
 
 ####  DISTRIBUTED TRACING  - SPRING CLOUD SLEUTH - MICROMETER TRACING  ####
+
+# Activation de Micrometer Tracing
+management.tracing.enabled=true
+
 # Configuration du tracing distribué
 # 100% des traces (réduire en production ex: 0.1 pour 10%)
 management.tracing.sampling.probability=1.0
@@ -52,6 +56,9 @@ management.tracing.sampling.probability=1.0
 management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 # Ou si Zipkin est dans un container Docker :
 # management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
+
+# Propagation des en-têtes (format B3 pour la compatibilité avec Sleuth/Zipkin)
+management.tracing.propagation.type=B3
 
 # Configuration des logs pour inclure les trace ID et span ID
 logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
@@ -66,7 +73,7 @@ logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-
 ####  ACTUATOR  ####
 # Configuration des endpoints Actuator
 #management.endpoints.web.exposure.include=health,info,metrics,prometheus,tracing,refresh
-management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=health,info,metrics,prometheus,tracing
 
 ##  LOG  ##
 logging.level.org.springframework.boot.actuate=DEBUG
