--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,8 +48,8 @@ eureka.instance.hostname=localhost
 # Activation de Micrometer Tracing
 management.tracing.enabled=true
 
-# Configuration du tracing distribué
-# 100% des traces (réduire en production ex: 0.1 pour 10%)
+# Configuration du tracing distribue
+# 100% des traces (reduire en production ex: 0.1 pour 10%)
 management.tracing.sampling.probability=1.0
 
 # Configuration Zipkin
@@ -57,7 +57,7 @@ management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 # Ou si Zipkin est dans un container Docker :
 # management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
 
-# Propagation des en-têtes (format B3 pour la compatibilité avec Sleuth/Zipkin)
+# Propagation des en-tetes (format B3 pour la compatibilite avec Sleuth/Zipkin)
 management.tracing.propagation.type=B3
 
 # Configuration des logs pour inclure les trace ID et span ID
