--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
     </properties>
 
     <dependencies>
+
         <!-- Spring Security -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -88,7 +89,7 @@
         </dependency>
 
         <!-- Remplace Spring Cloud Sleuth pour Spring Boot 3.x -->
-        <!-- Actuator avec Micrometer Tracing intégré -->
+        <!-- Actuator avec Micrometer Tracing integre -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
@@ -153,18 +154,19 @@
 
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring-cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>org.springframework.cloud</groupId>-->
+<!--                <artifactId>spring-cloud-dependencies</artifactId>-->
+<!--                <version>${spring-cloud.version}</version>-->
+<!--                <type>pom</type>-->
+<!--                <scope>import</scope>-->
+<!--            </dependency>-->
         </dependencies>
     </dependencyManagement>
 
     <build>
         <plugins>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -179,6 +181,7 @@
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -192,36 +195,132 @@
                 </configuration>
             </plugin>
 
-<!--            Mockito utilise actuellement une méthode dynamique pour charger un agent Java (byte-buddy-agent),-->
-<!--            ce qui ne sera plus autorisé par défaut dans les futures versions du JDK.-->
-<!--            Modifie la configuration de Maven Surefire (pour les tests unitaires) dans ton pom.xml pour ajouter-->
-<!--            Mockito comme agent JVM et désactiver le partage des classes.-->
-<!--            Cela garantit que tes tests continueront à fonctionner avec les futures versions du JDK.-->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.11</version>
+                <executions>
+                    <!-- Preparation de l'agent JaCoCo -->
+                    <execution>
+                        <id>prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                        <configuration>
+                            <destFile>${project.build.directory}/jacoco.exec</destFile>
+                        </configuration>
+                    </execution>
+
+                    <!-- Preparation de l'agent JaCoCo pour les tests unitaires -->
+                    <execution>
+                        <id>prepare-agent-unit</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                        <configuration>
+                            <destFile>${project.build.directory}/jacoco-unit.exec</destFile>
+                            <excludes>
+                                <exclude>com/microdiab/mpatient/MpatientApplication*</exclude>
+<!--                                <exclude>com/microdiab/mpatient/exception/**</exclude>-->
+                            </excludes>
+                        </configuration>
+                    </execution>
+
+                    <!-- Rapport pour les tests unitaires uniquement -->
+                    <execution>
+                        <id>report-unit</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                        <configuration>
+                            <dataFile>${project.build.directory}/jacoco-unit.exec</dataFile>
+                            <outputDirectory>${project.reporting.outputDirectory}/jacoco-unit</outputDirectory>
+                            <excludes>
+                                <exclude>com/microdiab/mpatient/MpatientApplication*</exclude>
+<!--                                <exclude>com/microdiab/mpatient/exception/**</exclude>-->
+                            </excludes>
+                        </configuration>
+                    </execution>
+
+                    <!-- Rapport global (tous les tests) -->
+                    <execution>
+                        <id>report-aggregate</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                        <configuration>
+                            <dataFile>${project.build.directory}/jacoco-unit.exec</dataFile>
+                            <outputDirectory>${project.reporting.outputDirectory}/jacoco-aggregate</outputDirectory>
+                            <excludes>
+                                <exclude>com/microdiab/mpatient/MpatientApplication*</exclude>
+<!--                                <exclude>com/microdiab/mpatient/exception/**</exclude>-->
+                            </excludes>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!--            Mockito utilise actuellement une methode dynamique pour charger un agent Java (byte-buddy-agent),-->
+            <!--            ce qui ne sera plus autorise par defaut dans les futures versions du JDK.-->
+            <!--            Modifie la configuration de Maven Surefire (pour les tests unitaires) dans ton pom.xml pour ajouter-->
+            <!--            Mockito comme agent JVM et desactiver le partage des classes.-->
+            <!--            Cela garantit que tes tests continueront a fonctionner avec les futures versions du JDK.-->
+            <!-- Configuration Maven Surefire pour les tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
                 <configuration>
+                    <!-- Exclure les tests d'integration -->
+                    <excludes>
+                        <exclude>**/*IntegrationTest.java</exclude>
+                        <exclude>**/*IT.java</exclude>
+                        <exclude>**/MpatientApplication*.java</exclude>
+                    </excludes>
                     <argLine>
+                        @{argLine}
                         -Xshare:off
                         -javaagent:"${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar"=--inline-mock-maker-enable
                     </argLine>
                 </configuration>
             </plugin>
 
+            <!-- Configuration Maven Failsafe pour les tests d'integration -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <!--                <version>3.2.5</version>-->
+                <configuration>
+                    <!-- Inclure uniquement les tests d'integration -->
+                    <includes>
+                        <include>**/*IntegrationTest.java</include>
+                        <include>**/*IT.java</include>
+                    </includes>
+                    <excludes>
+                        <exclude>**/MpatientApplication*.java</exclude>
+                    </excludes>
+                    <argLine>
+                        @{argLine}
+                        -Xshare:off
+                        -javaagent:"${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar"=--inline-mock-maker-enable
+                    </argLine>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 
         </plugins>
     </build>
 
     <repositories>
-<!--        <repository>-->
-<!--            <id>spring-milestones</id>-->
-<!--            <name>Spring Milestones</name>-->
-<!--            <url>https://repo.spring.io/milestones</url>-->
-<!--            <snapshots>-->
-<!--                <enabled>false</enabled>-->
-<!--            </snapshots>-->
-<!--        </repository>-->
     </repositories>
 
 </project>
