--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.5.5</version>
+        <version>3.5.8</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.microdiab</groupId>
@@ -34,12 +34,13 @@
 
     <dependencies>
 
-        <!-- Spring Security -->
+        <!-- SPRING BOOT STARTERS -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
+        <!-- Dependances pour les contrôleurs REST : Spring MVC, Jackson, Tomcat, Spring Boot Auto-Configuration -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -50,10 +51,23 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+        <!-- Jakarta Validation -->
         <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <scope>runtime</scope>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+        <!-- Actuator avec Micrometer Tracing intégré -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+
+        <!-- Spring Cloud -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
 
         <dependency>
@@ -61,41 +75,23 @@
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
         </dependency>
 
-<!--    <dependency>             A REACTIVER PLUS TARD -->
-<!--        <groupId>org.springframework.cloud</groupId>-->
-<!--        <artifactId>spring-cloud-starter-config</artifactId>-->
-<!--    </dependency>-->
-
-<!--    <dependency>            EXISTE PLUS BAS         -->
-<!--        <groupId>org.springframework.boot</groupId>-->
-<!--        <artifactId>spring-boot-starter-actuator</artifactId>-->
-<!--    </dependency>-->
-
+        <!-- DATABASE -->
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
         </dependency>
 
-        <!-- LOMBOK - 251110 - A Desactiver car difficile a maintenir sans abonnement intelliJ -->
+        <!-- LOMBOK -->
+        <!-- 251110 - A Desactiver car difficile a maintenir sans abonnement intelliJ -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
-        </dependency>
-
-        <!-- Remplace Spring Cloud Sleuth pour Spring Boot 3.x -->
-        <!-- Actuator avec Micrometer Tracing integre -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-
-        <!-- Bridge Brave pour Micrometer Tracing (remplace Sleuth) -->
+        <!-- TRACING -->
+        <!-- Micrometer Tracing (remplace Sleuth) -->
         <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-tracing-bridge-brave</artifactId>
@@ -107,25 +103,20 @@
             <artifactId>zipkin-reporter-brave</artifactId>
         </dependency>
 
-        <!-- Pour la creation automatique de span @NewSpan-->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-aop</artifactId>-->
-<!--        </dependency>-->
-
+        <!-- LOGGING -->
         <!-- Optionnel : pour les logs avec trace ID -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-logging</artifactId>
         </dependency>
 
+        <!-- TESTS -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
 
-<!--        Dependances for tests-->
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
@@ -138,16 +129,11 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- DOCUMENTATION -->
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <scope>test</scope>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.13</version>
         </dependency>
 
     </dependencies>
@@ -167,21 +153,23 @@
     <build>
         <plugins>
 
+            <!-- Compiler Plugin (avec Lombok) -->
+            <!-- 251110 - A Desactiver car difficile a maintenir sans abonnement intelliJ -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-
-                <!-- LOMBOK - 251110 - A Desactiver car difficile a maintenir sans abonnement intelliJ -->
                 <configuration>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
 
+            <!-- Spring Boot Maven Plugin -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -195,6 +183,55 @@
                 </configuration>
             </plugin>
 
+            <!-- Génération de la Javadoc HTML dans target/apidocs -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.6.3</version>
+                <configuration>
+                    <destDir>apidocs</destDir>
+                    <reportOutputDirectory>${project.build.directory}</reportOutputDirectory>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>generate-javadoc-html</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>javadoc</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- Plugin pour copier la Javadoc dans src/main/resources/static -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.3.1</version>
+                <executions>
+                    <execution>
+                        <id>copy-javadoc-to-static</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${basedir}/src/main/resources/static/apidocs</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>${project.build.directory}/apidocs</directory>
+                                    <includes>
+                                        <include>**/*</include> <!-- Copie TOUT, y compris les sous-dossiers -->
+                                    </includes>
+                                </resource>
+                            </resources>
+                            <overwrite>true</overwrite> <!-- Écrase les anciens fichiers -->
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- JaCoCo Plugin -->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -221,7 +258,7 @@
                             <destFile>${project.build.directory}/jacoco-unit.exec</destFile>
                             <excludes>
                                 <exclude>com/microdiab/mpatient/MpatientApplication*</exclude>
-<!--                                <exclude>com/microdiab/mpatient/exception/**</exclude>-->
+                                <exclude>com/microdiab/mpatient/configurations/**</exclude>
                             </excludes>
                         </configuration>
                     </execution>
@@ -238,7 +275,7 @@
                             <outputDirectory>${project.reporting.outputDirectory}/jacoco-unit</outputDirectory>
                             <excludes>
                                 <exclude>com/microdiab/mpatient/MpatientApplication*</exclude>
-<!--                                <exclude>com/microdiab/mpatient/exception/**</exclude>-->
+                                <exclude>com/microdiab/mpatient/configurations/**</exclude>
                             </excludes>
                         </configuration>
                     </execution>
@@ -255,7 +292,7 @@
                             <outputDirectory>${project.reporting.outputDirectory}/jacoco-aggregate</outputDirectory>
                             <excludes>
                                 <exclude>com/microdiab/mpatient/MpatientApplication*</exclude>
-<!--                                <exclude>com/microdiab/mpatient/exception/**</exclude>-->
+                                <exclude>com/microdiab/mpatient/configurations/**</exclude>
                             </excludes>
                         </configuration>
                     </execution>
@@ -277,7 +314,6 @@
                     <excludes>
                         <exclude>**/*IntegrationTest.java</exclude>
                         <exclude>**/*IT.java</exclude>
-                        <exclude>**/MpatientApplication*.java</exclude>
                     </excludes>
                     <argLine>
                         @{argLine}
@@ -298,9 +334,6 @@
                         <include>**/*IntegrationTest.java</include>
                         <include>**/*IT.java</include>
                     </includes>
-                    <excludes>
-                        <exclude>**/MpatientApplication*.java</exclude>
-                    </excludes>
                     <argLine>
                         @{argLine}
                         -Xshare:off
