--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,46 +1,61 @@
+# Nom de l'application pour l'enregistrement dans Eureka
 spring.application.name=mpatient
+
+# Port du serveur
+server.port=9001
 
 ###  SRPING CLOUD CONFIG ###
 #spring.config.import=optional:configserver:http://localhost:9101
+# Desactive l'import de configuration depuis un serveur de config externe
 spring.cloud.config.enabled=false
-
-server.port=9001
 
 #CONFIGURATION DATA SOURCE
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/patientservice?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=rootroot
-#DEFINI ENCODAGE POUR DATA.SQL
+#Avant Docker
+#spring.datasource.url=jdbc:mysql://localhost:3306/patientservice?serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=rootroot
+#Apres Docker
+# Configuration de la base de donnees MySQL (utilise les variables d'environnement)
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:mysql-mpatient}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:patientservice}?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=${MYSQL_USERNAME:root}
+spring.datasource.password=${MYSQL_PASSWORD:rootroot}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Defini encodage pour data.sql
 spring.datasource.sql-script-encoding=UTF-8
 
-###  CONFIGURATION JPA  ###
+###  CONFIGURATION JPA/HIBERNATE  ###
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-
+#spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # Open In View JPA
 # Enabled by default in Spring Boot applications using JPA/Hibernate.
 # This option keeps the Hibernate session open for the duration of the HTTP request.
 # It is generally advisable to disable the option for better resource management and more predictable behavior.
 # Useful when lazy loading is required
 spring.jpa.open-in-view=false
-
 spring.sql.init.mode=always
 
 #MES CONFIGURATIONS
 #limitDePatients : 0 = All
 #mes-configs.limitDePatients=0
 
-# A AJOUTER A CONFIG-SERVER
-#Eureka
-eureka.client.serviceUrl.defaultZone:http://localhost:9102/eureka/
+###  EUREKA  ###
+#Eureka avant Docker
+#eureka.client.serviceUrl.defaultZone:http://localhost:9102/eureka/
+#Eureka apres Docker
+eureka.client.serviceUrl.defaultZone=http://${EUREKA_SERVER_HOST:eureka-server}:${EUREKA_SERVER_PORT:9102}/eureka/
 
 # RENOUVELLEMENT EUREKA
 eureka.instance.leaseRenewalIntervalInSeconds=4
 
 # Forcer IP locale au lieu du hostname de entreprise
 eureka.instance.prefer-ip-address=true
-eureka.instance.hostname=localhost
+
+# avant docker
+# eureka.instance.hostname=localhost
+# apres docker - Ne pas definir manuellement le hostname, laissez Docker le gerer
+# eureka.instance.hostname=localhost
 
 
 ####  DISTRIBUTED TRACING  - SPRING CLOUD SLEUTH - MICROMETER TRACING  ####
@@ -52,10 +67,12 @@ management.tracing.enabled=true
 # 100% des traces (reduire en production ex: 0.1 pour 10%)
 management.tracing.sampling.probability=1.0
 
-# Configuration Zipkin
-management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+# Configuration Zipkin - avant docker
+#management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+# apres docker
+management.zipkin.tracing.endpoint=http://${ZIPKIN_SERVER_HOST:zipkin}:9411/api/v2/spans
 # Ou si Zipkin est dans un container Docker :
-# management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
+#management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
 
 # Propagation des en-tetes (format B3 pour la compatibilite avec Sleuth/Zipkin)
 management.tracing.propagation.type=B3
@@ -78,6 +95,7 @@ management.endpoints.web.exposure.include=health,info,metrics,beans
 ##  LOG  ##
 logging.level.org.springframework.boot.actuate=DEBUG
 logging.level.org.springframework.boot.actuate.autoconfigure=DEBUG
+logging.level.com.microdiab.mpatient.filter=DEBUG
 
 ##  /INFO  ##
 info.app.version=mpatient - Version under development
