Fix Eureka configuration in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,10 +47,10 @@ spring.sql.init.mode=always
 eureka.client.serviceUrl.defaultZone=http://${EUREKA_SERVER_HOST:eureka-server}:${EUREKA_SERVER_PORT:9102}/eureka/
 
 # RENOUVELLEMENT EUREKA
-eureka.instance.leaseRenewalIntervalInSeconds=4
+#eureka.instance.leaseRenewalIntervalInSeconds=4
 
 # Forcer IP locale au lieu du hostname de entreprise
-eureka.instance.prefer-ip-address=true
+#eureka.instance.prefer-ip-address=true
 
 # avant docker
 # eureka.instance.hostname=localhost
