--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -77,7 +77,10 @@ management.zipkin.tracing.endpoint=http://${ZIPKIN_SERVER_HOST:zipkin}:9411/api/
 # Propagation des en-tetes (format B3 pour la compatibilite avec Sleuth/Zipkin)
 management.tracing.propagation.type=B3
 
-# Configuration des logs pour inclure les trace ID et span ID
+# Header propagation (B3 for Zipkin, W3C for OpenTelemetry)
+management.tracing.propagation.type=B3,W3C
+
+# Log pattern to include trace and span IDs
 logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
 
 # Niveaux de logs
