--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -14,3 +14,8 @@ sql.init.mode=never
 
 # Console H2 (optionnel)
 h2.console.enabled=true
+
+# Desactive Eureka pour les tests
+eureka.client.enabled=false
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
