Cleanup mpatient microservice

--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
-        <!-- Dependances pour les contrôleurs REST : Spring MVC, Jackson, Tomcat, Spring Boot Auto-Configuration -->
+        <!-- Dependencies for REST controllers: Spring MVC, Jackson, Tomcat, Spring Boot Auto-Configuration -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -57,7 +57,7 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
-        <!-- Actuator avec Micrometer Tracing intégré -->
+        <!-- Actuator with Micrometer Tracing integrated -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
@@ -75,7 +75,7 @@
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
         </dependency>
 
-        <!-- DATABASE -->
+        <!-- DATABASE MySQL-->
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
@@ -83,7 +83,6 @@
         </dependency>
 
         <!-- LOMBOK -->
-        <!-- 251110 - A Desactiver car difficile a maintenir sans abonnement intelliJ -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -91,20 +90,19 @@
         </dependency>
 
         <!-- TRACING -->
-        <!-- Micrometer Tracing (remplace Sleuth) -->
+        <!-- Bridge Brave for Micrometer Tracing -->
         <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-tracing-bridge-brave</artifactId>
         </dependency>
 
-        <!-- Reporter Zipkin pour envoyer les traces -->
+        <!-- Reporter Zipkin to send the tracks -->
         <dependency>
             <groupId>io.zipkin.reporter2</groupId>
             <artifactId>zipkin-reporter-brave</artifactId>
         </dependency>
 
-        <!-- LOGGING -->
-        <!-- Optionnel : pour les logs avec trace ID -->
+        <!-- Optional : for logs with trace ID -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-logging</artifactId>
@@ -153,8 +151,7 @@
     <build>
         <plugins>
 
-            <!-- Compiler Plugin (avec Lombok) -->
-            <!-- 251110 - A Desactiver car difficile a maintenir sans abonnement intelliJ -->
+            <!-- Compiler Plugin (with Lombok) -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -183,7 +180,7 @@
                 </configuration>
             </plugin>
 
-            <!-- Génération de la Javadoc HTML dans target/apidocs -->
+            <!-- Generation of HTML Javadoc in target/apidocs -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
@@ -203,7 +200,7 @@
                 </executions>
             </plugin>
 
-            <!-- Plugin pour copier la Javadoc dans src/main/resources/static -->
+            <!-- Plugin to copy Javadoc into src/main/resources/static -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
@@ -221,11 +218,11 @@
                                 <resource>
                                     <directory>${project.build.directory}/apidocs</directory>
                                     <includes>
-                                        <include>**/*</include> <!-- Copie TOUT, y compris les sous-dossiers -->
+                                        <include>**/*</include>
                                     </includes>
                                 </resource>
                             </resources>
-                            <overwrite>true</overwrite> <!-- Écrase les anciens fichiers -->
+                            <overwrite>true</overwrite>
                         </configuration>
                     </execution>
                 </executions>
@@ -237,7 +234,7 @@
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.11</version>
                 <executions>
-                    <!-- Preparation de l'agent JaCoCo -->
+                    <!-- Preparation of the JaCoCo agent -->
                     <execution>
                         <id>prepare-agent</id>
                         <goals>
@@ -248,7 +245,7 @@
                         </configuration>
                     </execution>
 
-                    <!-- Preparation de l'agent JaCoCo pour les tests unitaires -->
+                    <!-- Preparing the JaCoCo agent for unit testing -->
                     <execution>
                         <id>prepare-agent-unit</id>
                         <goals>
@@ -264,7 +261,7 @@
                         </configuration>
                     </execution>
 
-                    <!-- Rapport pour les tests unitaires uniquement -->
+                    <!-- Report for unit tests only -->
                     <execution>
                         <id>report-unit</id>
                         <phase>test</phase>
@@ -282,7 +279,7 @@
                         </configuration>
                     </execution>
 
-                    <!-- Rapport global (tous les tests) -->
+                    <!-- Overall report (all tests) -->
                     <execution>
                         <id>report-aggregate</id>
                         <phase>verify</phase>
@@ -302,18 +299,19 @@
                 </executions>
             </plugin>
 
-            <!--            Mockito utilise actuellement une methode dynamique pour charger un agent Java (byte-buddy-agent),-->
-            <!--            ce qui ne sera plus autorise par defaut dans les futures versions du JDK.-->
-            <!--            Modifie la configuration de Maven Surefire (pour les tests unitaires) dans ton pom.xml pour ajouter-->
-            <!--            Mockito comme agent JVM et desactiver le partage des classes.-->
-            <!--            Cela garantit que tes tests continueront a fonctionner avec les futures versions du JDK.-->
-            <!-- Configuration Maven Surefire pour les tests -->
+            <!-- Mockito currently uses a dynamic method to load a Java agent (byte-buddy-agent), -->
+            <!-- which will no longer be permitted by default in future versions of the JDK. -->
+            <!-- Modify the Maven Surefire configuration (for unit tests) in pom.xml to add -->
+            <!-- Mockito as a JVM agent and disable class sharing. -->
+            <!-- This ensures that tests will continue to work with future versions of the JDK. -->
+
+            <!-- Configuration Maven Surefire for tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
                 <configuration>
-                    <!-- Exclure les tests d'integration -->
+                    <!-- Exclude integration tests -->
                     <excludes>
                         <exclude>**/*IntegrationTest.java</exclude>
                         <exclude>**/*IT.java</exclude>
@@ -326,13 +324,11 @@
                 </configuration>
             </plugin>
 
-            <!-- Configuration Maven Failsafe pour les tests d'integration -->
+            <!-- Maven Failsafe configuration for integration tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <!--                <version>3.2.5</version>-->
                 <configuration>
-                    <!-- Inclure uniquement les tests d'integration -->
                     <includes>
                         <include>**/*IntegrationTest.java</include>
                         <include>**/*IT.java</include>
